added link to advanced calculator

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 
             </table>
         </div>
+
+        <br>
+        <a href = "https://adamjaywise.github.io/dynamicRangeCalculator/">Advanced Dynamic Range Calculator</a>
     </body>
 
     <script
