--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
             .labelTd {
                 padding : 5px;
                 text-align: right;
-                border-right : 2px solid #ddd;
-                border-right-style: ridge;
                 font-size: 18px;
             }
 
@@ -46,6 +44,7 @@
 
             input {
                 font-size: 14px;
+                width : 50%;
                 
             }
 
